--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Calorit</string>
     <string name="action_settings">Settings</string>
+    <string name="username_hint">Enter your email</string>
+    <string name="password_hint">Enter your password</string>
+    <string name="confirm_password_hint">Confirm your password</string>
+    <string name="sign_in_btn">Sign In</string>
+    <string name="sign_up_btn">Sign up</string>
+    <string name="create_account_btn">Create Account</string>
+    <string name="title_activity_sign_up">Sign Up</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+
 </resources>
