--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,12 @@
     <string name="create_account_btn">Create Account</string>
     <string name="title_activity_sign_up">Sign Up</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_meal_log">MealLogActivity</string>
+
+    <string name="action_logout">Log Out</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
