--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Calorit</string>
     <string name="username_hint">Enter your email</string>
     <string name="password_hint">Enter your password</string>
+    <string name="sign_up_username_hint">Enter your email, >= 20 characters</string>
+    <string name="sign_up_password_hint">Enter your password, >= 10 characters</string>
     <string name="confirm_password_hint">Confirm your password</string>
     <string name="sign_in_btn">Sign In</string>
     <string name="sign_up_btn">Sign up</string>
@@ -14,21 +16,14 @@
     <string name="logout_dialog_message">Do you want to log out?</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
-    <string name="edit_height_feet_hint">Enter height(ft)</string>
-    <string name="edit_height_inches_hint">Enter height(in)</string>
-    <string name="edit_weight">Enter weight(lbs)</string>
-    <string name="edit_age_hint">Enter age</string>
-    <string name="edit_gender_hint">Enter gender</string>
-    <string name="edit_bmr_hint">Enter BMR</string>
+    <string name="edit_height_feet_hint">Enter height(ft) (between 0 and 7)</string>
+    <string name="edit_height_inches_hint">Enter height(in) (between 0 and 12)</string>
+    <string name="edit_weight">Enter weight(lbs) (greater than 0)</string>
+    <string name="edit_age_hint">Enter age (between 0 and 100)</string>
+    <string name="edit_gender_hint">Enter gender (M or F)</string>
     <string name="save_body_info_btn_text">Save</string>
     <string name="calories_left_textview">Calories Left</string>
     <string name="enter_meal_btn">Enter Meal</string>
     <string name="meal_log_btn">Meal Log</string>
     <string name="edit_body_info_btn">Edit Body Info</string>
-
-
-
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
