Few typos fixed. Closer to new functionality but still not quite working. App is stable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,11 @@
     <string name="meal_log_btn">Meal Log</string>
     <string name="edit_body_info_btn">Edit Body Info</string>
 
-    <string name="food_category_carbohydrate">Ccarbohydrate</string>
+    <string name="food_category_carbohydrate">Carbohydrate</string>
     <string name="food_category_fruit_veggie">Fruits and Veggies</string>
     <string name="food_category_dairy">Dairy</string>
     <string name="food_category_meat">Meat</string>
-    <string name="food_category_sweet">Sweet</string>
-    <string name="food_category_snack">Snack</string>
+    <string name="food_category_sweet">Sweets</string>
+    <string name="food_category_snack">Snacks</string>
     <string name="done_btn">Done</string>
 </resources>
