More typos found. More javadocs added. Changed button texts on MealFragment to match category names in the DB (very small changes - singular to plural for example). Need to hook up the MealActivity to the FoodItemFragment and pass in the category selected to test functionality of the FoodItemFragment and related classes. The PHP file is on the server that should handle the downloads to display the FoodItems from the respective category, but again has not been tested.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="meal_log_btn">Meal Log</string>
     <string name="edit_body_info_btn">Edit Body Info</string>
 
-    <string name="food_category_carbohydrate">Carbohydrate</string>
+    <string name="food_category_carbohydrate">Carbohydrates</string>
     <string name="food_category_fruit_veggie">Fruits and Veggies</string>
     <string name="food_category_dairy">Dairy</string>
     <string name="food_category_meat">Meat</string>
