--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="login_prefs">edu.uw.tacoma.team5.calorit.prefs</string>
     <string name="loggedin">loggedin</string>
     <string name="loggedin_email">loggedin_email</string>
+    <string name="cal_left">cal_left</string>
     <string name="title_activity_home">Home</string>
     <string name="logout">Log out</string>
     <string name="logout_dialog_message">Do you want to log out?</string>
@@ -42,5 +43,5 @@
     <string name="done_btn">Done</string>
     <string name="confirm_btn">Confirm</string>
     <string name="undo_btn">Undo</string>
-    <string name="exercise_checkbox">Have you exercise today?</string>
+    <string name="exercise_checkbox">Have you exercised today?</string>
 </resources>
